tests/PhiCore/compile_failure/src/core/floating_point/int.fail.cpp
#include <phi/core/floating_point.hpp>

int main()
{
    phi::floating_point<int> f{3};
}
